# cbr-bot

./: .gitignore  dependencies.ini.example  pyproject.toml
src/crb_currency_rate/: __main__.py
src/crb_currency_rate/common/marker/: redis.py
src/crb_currency_rate/core/: __init__.py  setting.py  setup_redis.py
src/crb_currency_rate/dto/: currency_rate.py
src/crb_currency_rate/service/: dependency.py  redis.py
src/crb_currency_rate/service/parse/: rate_parse.py  session.py  tasks.py
